--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.547.0",
     "next": "15.5.4",
     "react": "19.1.0",
